# Algorithm_library

./: CMakeLists.txt  README.md  main.cpp
include/: library.h
include/algorithms/: Search.h  search.h
include/array/: IrrgularArray.h  SortedArrayPairUtils.h  SortedArrayUtils.h
include/string/: String.h
include/tools/: FastStateEncoder.h  StateEncoder.h  state_checkhelper.h  state_compression.h  tools.h
src/: SortedArrayUtils.cpp  String.cpp  search.cpp
test/: test_search.cpp
